--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.1",
+    "react-icons": "^5.5.0",
     "react-markdown": "^9.1.0",
     "react-redux": "^9.2.0",
+    "react-resizable-panels": "^2.1.7",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "sonner": "^1.7.1",
